# utils

./: AUTHORS  CMakeLists.txt  LICENSE  base64.c  base64.h  bitrot.h  bitswap.h  sha1.c  sha1.h
include/utils/: bitrot.h  byteorder.h  byteswap.h  sha1.h  strops.h
src/: base64.c  sha1.c  strops.c
test/: .gitignore  CMakeLists.txt  Makefile  base64_decode.c  base64_encode.c  bitrot.c  bitswap.c  byteorder.c  byteswap.c  sha1.c  sha1.py
